syntax = "proto3";

package com.wabenet.dodo.provision.v1alpha2;

option go_package = "github.com/wabenet/dodo-stage/api/provision/v1alpha2";

import "google/protobuf/empty.proto";
import "core/v1alpha5/plugin.proto";
import "stage/v1alpha4/stage.proto";

service Plugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha5.PluginInfo);
  rpc InitPlugin(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha5.InitPluginResponse);
  rpc ResetPlugin(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc ProvisionStage(ProvisionStageRequest) returns (google.protobuf.Empty);
  rpc CleanStage(CleanStageRequest) returns (google.protobuf.Empty);
}

message ProvisionStageRequest {
  string                                     name        = 1;
  com.wabenet.dodo.stage.v1alpha4.SSHOptions ssh_options = 2;
}

message CleanStageRequest {
  string name  = 1;
}
